# MediaFundamentalsP3

./: .gitignore  README.md  README.txt  ReadMe.txt
Project/: CMakeLists.txt  KirkbyMediaFundamentalsP1.sln  MediaFundamentalsP3.sln  Readme.txt
Project/KirkbyMediaFundamentalsP1/: FMODSystem.cpp  FMODSystem.h  GameLogic.cpp  GameLogic.h  KirkbyMediaFundamentalsP1.vcxproj  KirkbyMediaFundamentalsP1.vcxproj.filters  cAudioItem.cpp  cAudioItem.hpp  cAudioManager.cpp  cAudioManager.hpp  cBoss.cpp  cBoss.h  cGameEntity.cpp  cGameEntity.h  cPlayer.cpp  cPlayer.h  cSkeleton.cpp  cSkeleton.h  main.cpp
Project/KirkbyMediaFundamentalsP1/config_files/: compressed_audio_file_paths.xml  netSounds.xml  textToWav.xml  uncompressed_audio_file_paths.xml
Project/MediaFundamentalsP3/: MediaFundamentalsP3.vcxproj  MediaFundamentalsP3.vcxproj.filters  cAudioItem.hpp  cAudioManager.cpp  main.cpp
Project/MediaFundamentalsP3/config_files/: audio_files_paths.txt  textToSpeech.xml
Project/common/includes/glad/: glad.h
Project/common/src/: glad.c
Project/common/src/shaders/: simple_text.frag  simple_text.vert
